--- a/custom_components/haefele_mesh/manifest.json
+++ b/custom_components/haefele_mesh/manifest.json
@@ -3,7 +3,7 @@
   "name": "Häfele Mesh Local",
   "codeowners": ["@thetechnikfreak"],
   "config_flow": true,
-  "dependencies": [],
+  "dependencies": ["mqtt"],
   "documentation": "https://github.com/thetechnikfreak/haefele-mesh-connect-local",
   "integration_type": "hub",
   "iot_class": "local_push",
